syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Pinterest.Shared.Contracts.Secrets";

package secrets;

service SecretsService {
  rpc GetSecrets(google.protobuf.Empty) returns (SecretsInfo) {
    option (google.api.http) = {
      get: "/secrets"
    };
  }
}
message SecretsInfo {
  string access_secret = 1;
  string refresh_secret = 2;
  int32 access_expires = 3;
  int32 refresh_expires = 4;
}
